# arl-met

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  __init__.py  arl.py  format.md  grid.py  justfile  pyproject.toml  records.py  setup.py
.github/workflows/: black.yml  docs.yml  publish.yml  quality.yml  tests.yml
arlmet/: __init__.py  arlmet.py  grid.py  records.py
docs/: README.md  api.rst  concatenating.rst  conf.py  contributing.rst  cropping.rst  downloading.rst  format.rst  getting-started.rst  index.rst  installation.rst  quickstart.rst  sampling.rst  user-guides.rst  vertical.rst  writing.rst
docs/_static/: custom.css
docs/_templates/autosummary/: class.rst
docs/source/: api.rst  conf.py  contributing.rst  format.rst  index.rst  installation.rst  quickstart.rst
src/arlmet/: __init__.py  _pack.c  _pack.pyi  _time.py  arlmet.py  collection.py  concat.py  core.py  file.py  grid.py  header.py  index.py  metadata.py  packing.py  record.py  records.py  recordset.py  sampling.py  sources.py  subset.py  surface.py  vertical.py  xarray.py  xarray_io.py
src/arlmet/ops/: __init__.py  concat.py  subset.py
src/arlmet/resources/: ASCDATA.CFG
src/arlmet/xarray/: __init__.py  _accessor.py  _backend.py  _coords.py  _vertical.py  dataset.py
tests/: README.md  __init__.py  test_arlmet.py  test_concat.py  test_grid.py  test_low_level.py  test_metadata.py  test_packing.py  test_pkg.py  test_records.py  test_sampling.py  test_sources.py  test_subset.py  test_subset_slow.py  test_vertical.py  test_writer.py
