[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arl-met"
version = "2025.10.6"
description = "Python package for reading and analyzing NOAA ARL meteorological files"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "jmineau"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
    "pandas",
    "xarray",
    "pyproj",
]

[project.urls]
Homepage = "https://github.com/jmineau/arl-met"
Repository = "https://github.com/jmineau/arl-met"

[tool.setuptools.packages.find]
include = ["arlmet*"]
