[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy>=1.24"]
build-backend = "setuptools.build_meta"

[project]
name = "arlmet"
version = "0.1.0a1"
description = "Read and write ARL meteorological files."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "James Mineau", email = "jameskmineau@gmail.com"}
]
keywords = ["arl", "hysplit", "meteorology", "atmospheric-science", "xarray"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyproj>=3.5",
    "xarray>=2023.6",
]

[project.optional-dependencies]
sources = ["fsspec>=2024.2", "s3fs>=2024.2"]

[dependency-groups]
dev = [
    "arlmet[sources]",
    "build>=1.2",
    "docstr-coverage>=2.0.0",
    "pydata-sphinx-theme>=0.14.0",
    "pre-commit>=3.0.0",
    "pyright>=1.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "rust-just>=1.42.4",
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/jmineau/arl-met"
Documentation = "https://jmineau.github.io/arl-met/"
Repository = "https://github.com/jmineau/arl-met"
Issues = "https://github.com/jmineau/arl-met/issues"

[tool.coverage.run]
source = ["src/arlmet"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.uv]
required-version = ">=0.10.4"

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/.venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: requires live network access to external services such as NOAA S3",
    "slow: expensive runtime, bandwidth, or disk usage; excluded from default test runs",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
    "D213",  # multi-line summary should start at the second line
]
ignore = [
    "D212",  # incompatible with D213; keep summaries on the second line
    "E501",  # line too long, handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["arlmet"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"arlmet" = ["py.typed", "resources/*"]
